i18n/ja/docusaurus-plugin-content-docs/version-0.1.x/operations/commit.md
---
sidebar_position: 3
---

# 変更のコミット

専用の入力インターフェースでコミットを作成および修正します。

## キーバインド

| キー | アクション |
| :--- | :--- |
| `c` | コミット |
| `A` | コミットの修正 (Amend) |
| `ctrl+e` | 送信 |
| `esc` | キャンセル |
| `tab` | 次のフィールド |
| `shift+tab` | 前のフィールド |

## ワークフロー

### コミットの作成

1.  **ステージ**: **変更されたファイル** パネルでファイルがステージングされていることを確認します。
2.  **トリガー**: `c` を押します。
3.  **ポップアップ**: **コミットポップアップ** が2つのフィールドと共に表示されます：
    - **Summary**: コミットメッセージの1行目。
    - **Description**: コミットメッセージの詳細本文。
4.  **入力**:
    - サマリーを入力します。
    - `tab` を押して詳細（オプション）に移動します。
5.  **送信**: `ctrl+e` を押します。
    - **なぜ `ctrl+e` なのか？**: 詳細フィールドでは `enter` が改行に使用されるため、フォームの送信には `ctrl+e` が使用されます。

### コミットの修正 (Amend)

1.  **トリガー**: `A` (shift+a) を押します。
2.  **ポップアップ**: **Amendコミットポップアップ** が開き、*前回*のコミットメッセージが事前入力されています。
3.  **修正**: メッセージを編集するか、単に送信して新しくステージングされたファイルを含めます。
4.  **送信**: `ctrl+e` を押します。
